// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders chip with close button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessible={true}
    aria-disabled={false}
    aria-selected={false}
    style={
      [
        {
          "borderRadius": 8,
        },
        {
          "width": "100%",
        },
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 1,
          },
          {
            "paddingRight": 34,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "paddingLeft": 8,
              "paddingRight": 0,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 8,
                  "marginRight": 0,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "marginRight": 4,
            },
            {
              "marginRight": 8,
              "padding": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          close
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with custom close button 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessible={true}
    aria-disabled={false}
    aria-selected={false}
    style={
      [
        {
          "borderRadius": 8,
        },
        {
          "width": "100%",
        },
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 1,
          },
          {
            "paddingRight": 34,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "paddingLeft": 8,
              "paddingRight": 0,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 8,
                  "marginRight": 0,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "height": "100%",
        "justifyContent": "center",
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "marginRight": 4,
            },
            {
              "marginRight": 8,
              "padding": 0,
            },
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          arrow-down
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with icon 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessible={true}
    aria-disabled={false}
    aria-selected={false}
    style={
      [
        {
          "borderRadius": 8,
        },
        {
          "width": "100%",
        },
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 1,
          },
          {
            "paddingRight": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "paddingLeft": 8,
              "paddingRight": 0,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(103, 80, 164, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          information
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 8,
                  "marginRight": 16,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders chip with onPress 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    role="button"
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "borderRadius": 8,
          },
          {
            "width": "100%",
          },
        ],
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 1,
          },
          {
            "paddingRight": 0,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 16,
                  "marginRight": 16,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders outlined disabled chip 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "rgba(243, 237, 247, 1)",
      },
      undefined,
      {},
      {
        "backgroundColor": "transparent",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "transparent",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessible={true}
    aria-disabled={true}
    aria-selected={false}
    style={
      [
        {
          "borderRadius": 8,
        },
        {
          "width": "100%",
        },
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 0.38,
          },
          {
            "paddingRight": 0,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 27, 32, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 16,
                  "marginRight": 16,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders selected chip 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "borderStyle": "solid",
        "borderWidth": 0.5,
        "flexDirection": "column",
      },
      {
        "borderWidth": 1,
      },
      {
        "borderColor": "transparent",
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 8,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      },
    ]
  }
  testID="chip-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(232, 222, 248, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": 8,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        },
      ]
    }
  />
  <View
    accessible={true}
    aria-disabled={false}
    aria-selected={true}
    style={
      [
        {
          "borderRadius": 8,
        },
        {
          "width": "100%",
        },
      ]
    }
    testID="chip"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "paddingLeft": 4,
            "position": "relative",
          },
          {
            "paddingLeft": 0,
          },
          {
            "opacity": 1,
          },
          {
            "paddingRight": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignSelf": "center",
              "padding": 4,
            },
            {
              "paddingLeft": 8,
              "paddingRight": 0,
            },
            null,
          ]
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 25, 43, 1)",
                "fontSize": 18,
              },
              [
                {
                  "lineHeight": 18,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          check
        </Text>
      </View>
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(29, 27, 32, 1)",
              "writingDirection": "ltr",
            },
            [
              {
                "fontFamily": "System",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0.1,
                "lineHeight": 20,
              },
              [
                {
                  "marginVertical": 6,
                  "textAlignVertical": "center",
                },
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                {
                  "marginLeft": 8,
                  "marginRight": 16,
                },
                undefined,
              ],
            ],
          ]
        }
      >
        Example Chip
      </Text>
    </View>
  </View>
</View>
`;
